# bell-scheduler-plasmoid

./: CMakeLists.txt  README.md
applets/: CMakeLists.txt
applets/bellschedulernotifier/: CMakeLists.txt
applets/bellschedulernotifier/knotifications5/: bellschedulernotifier.notifyrc
applets/bellschedulernotifier/knotifications6/: bellschedulernotifier.notifyrc
applets/bellschedulernotifier/package/: metadata.desktop  metadata.json
applets/bellschedulernotifier/package/contents/ui/: main.qml
applets/bellschedulernotifier/plugin/: BellSchedulerIndicator.cpp  BellSchedulerIndicator.h  BellSchedulerIndicatorUtils.cpp  BellSchedulerIndicatorUtils.h  BellSchedulerIndicator_old.cpp  BellSchedulerIndicator_old.h  plugin.cpp  plugin.h  qmldir
debian/: bell--scheduler-indicator.install  bell-scheduler-indicator.dirs  bell-scheduler-indicator.postinst  bell-scheduler-indicator.postrm  bell-scheduler-indicator.prerm  changelog  control  copyright  rules
po/: plasma_applet_org.kde.plasma.bellschedulernotifier.pot  update_translations.sh
po/ca/: plasma_applet_org.kde.plasma.bellschedulernotifier.po
po/ca@valencia/: plasma_applet_org.kde.plasma.bellschedulernotifier.po
po/en_GB/: plasma_applet_org.kde.plasma.bellschedulernotifier.po
po/es/: plasma_applet_org.kde.plasma.bellschedulernotifier.po
